feat: ✨ add font family globle

--- a/package.json
+++ b/package.json
@@ -94,8 +94,10 @@
     "@emotion/styled": "11.11.0",
     "@mantine/carousel": "6.0.13",
     "@mantine/core": "6.0.13",
+    "@mantine/form": "6.0.15",
     "@mantine/hooks": "6.0.13",
     "@reduxjs/toolkit": "1.8.5",
+    "@tabler/icons-react": "2.23.0",
     "axios": "1.4.0",
     "embla-carousel-react": "8.0.0-rc07",
     "fontfaceobserver": "2.3.0",
