--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -13,7 +13,7 @@
       "@shared/*": ["app/shared/*"],
       "@constants/*": ["constants/*"],
       "@media": ["styles/media"],
-      "@hook": ["hook/*"]
+      "@hook/*": ["hook/*"]
     }
   }
 }
