--- a/package.json
+++ b/package.json
@@ -91,12 +91,14 @@
   },
   "dependencies": {
     "@craco/craco": "7.1.0",
+    "@emailjs/browser": "3.11.0",
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@mantine/carousel": "6.0.13",
     "@mantine/core": "6.0.13",
     "@mantine/form": "6.0.15",
     "@mantine/hooks": "6.0.13",
+    "@mantine/notifications": "6.0.16",
     "@reduxjs/toolkit": "1.8.5",
     "@tabler/icons-react": "2.23.0",
     "axios": "1.4.0",
